--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <!-- Load jQuery(1.7+) -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+  <!-- Customized Style -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
@@ -27,6 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
   <title>React App</title>
 </head>
 
@@ -44,6 +48,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   <!-- Compiled and minified JavaScript -->
+  <script src="https:code.jquery.com/jquery-3.4.1min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 
