--- a/client/public/index.html
+++ b/client/public/index.html
@@ -48,7 +48,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   <!-- Compiled and minified JavaScript -->
-  <script src="https:code.jquery.com/jquery-3.4.1min.js"></script>
+  <script src="https:code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 
