hopefully it will work

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <!-- Load jQuery(1.7+) -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <!-- Customized Style -->
