redirected to homepage on logout click

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -31,7 +31,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-  <title>RL-Sims</title>
+  <title>RL-Outdoors</title>
 </head>
 
 <body>
